# OpenAcaTeX

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
src/openacatex/: cli.py
src/openacatex/endpoints/: agents.py  mock.py  openrouter.py
src/openacatex/tools/: config.py
src/openacatex/tui/: app.py  screens.py
src/openacatex/tui/widgets/: __init__.py  chat_tab.py  config_tab.py  todo_tab.py
src/openacatex/workflows/: session.py
