[project]
name = "openacatex"
version = "0.1.0"
description = "AI-assisted revision engine for scientific LaTeX writing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "textual>=8.2.7",
    "pydantic-ai>=0.2.0",
    "toml>=0.10.2",
]

[project.scripts]
acatex = "openacatex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
